# Wine-Quality-Prediction-End-to-End-Project

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
code/: EDA.ipynb
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/1b3706cac9194bddad80efbe120153ea/: meta.yaml
mlruns/0/2933dda1c1ea4ae1aa5d4778da4ddbc7/: meta.yaml
mlruns/0/419d00d3490344fe838090cdeb08ec9c/: meta.yaml
mlruns/0/521b94d3e6e148768218d5cddc0fa901/: meta.yaml
mlruns/0/55a2c5aa9f164704a5a5e8faf147db3b/: meta.yaml
mlruns/0/5abc5093d36544b8814ecb11bbe27229/: meta.yaml
mlruns/0/6334305d9edd4515b7f7cf5c89162940/: meta.yaml
mlruns/0/6b19690673184e4e928bde6d4d381556/: meta.yaml
mlruns/0/70786e27a3b14ca2b1fada206376ee17/: meta.yaml
mlruns/0/78d6f7ea25464bc38f7b068d1b652ce5/: meta.yaml
mlruns/0/79daa24797bf4ceb8e6a3f9c5362e8c7/: meta.yaml
mlruns/0/7aa8d323822f420ba2738d03ee3b10ca/: meta.yaml
mlruns/0/82ee4021a5194edb99fbbd7504bfdcef/: meta.yaml
mlruns/0/8451b929c64f4fdcaae4192a2a374ff1/: meta.yaml
mlruns/0/85c1dde3eec64b7ea415e1e682a38626/: meta.yaml
mlruns/0/99cad6fde93d4da480c315319c387889/: meta.yaml
mlruns/0/9d73f6fc947b44779c597b6e94187041/: meta.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  o5_model_evaluation.ipynb  trials.ipynb
src/mlProject/: __init__.py
src/mlProject/config/: configuration.py
(+149 files in other folders)
